kubernetes/chat-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  labels:
    app: chat-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
    spec:
      containers:
        - name: chat-backend
          image: gitlab.iitb.ac.in:5050/asc/services/chat-backend:test
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: gitlab-registry
