kubernetes/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
spec:
  selector:
    app: chat-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      #nodePort: 30082
  type: ClusterIP
